objects/cqworkapp__CQWK_Dashboard_Configuration__mdt.object
<CustomObject>
    <description>This object will store the dashboard configuration for loading wave analytics dashboard in command center</description>
    <fields>
        <fullName>cqworkapp__Dashboard_Id__c</fullName>
        <description>The Id of Dashboard that is to be loaded in the app.</description>
        <label>Dashboard Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cqworkapp__Filtered_Report_URL__c</fullName>
        <description>This redirects the user to filtered report using the filter parameter</description>
        <label>Filtered Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cqworkapp__Height__c</fullName>
        <defaultValue>500</defaultValue>
        <description>The height of the dashboard component.</description>
        <label>Dashboard Height</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cqworkapp__Unfiltered_Report_URL__c</fullName>
        <description>This field will store the source org&apos;s report url where user will be redirected when clicking the view detail link.</description>
        <label>Unfiltered Report URL</label>
        <type>Url</type>
    </fields>
    <label>CQ Dashboard Configuration</label>
    <pluralLabel>CQ Dashboard Configurations</pluralLabel>
</CustomObject>